[tool.poetry]
name = "nlptest"
version = "0.1.0"
description = ""
authors = ["JulesBelveze <jules.belveze@hotmail.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.18.0"
torch = "^1.11.0"
sentencepiece = "^0.1.96"
pydantic = "^1.9.0"
overrides = "^6.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
