[tool.poetry]
name = "NLPtest"
version = "0.1.2"
description = "🧪 Behavioral tests for NLP models 🧪"
authors = ["JulesBelveze <jules.belveze@hotmail.fr>"]

license = "LICENSE"
homepage = "https://github.com/JulesBelveze/nlptest"
repository = "https://github.com/JulesBelveze/nlptest"
readme = "README.md"
keywords = ["nlp", "behavioral testing", "test"]
classifiers = [
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing"
]
include = [
    "LICENSE",
    "figures/"
]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.18.0"
torch = "^1.11.0"
sentencepiece = "^0.1.96"
pydantic = "^1.9.0"
overrides = "^6.1.0"
tabulate = "^0.8.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
